# raymarched-jellybeans

./: CMakeLists.txt  README.md  README.txt
resources/scenes/: 260919951-leopoldo-zugasti-competition.json  Metaballs.json  MetaballsDOF.json  MetaballsDOFJitter.json  MetaballsPlane.json  MetaballsReflection.json
src/: AABB.cpp  AABB.h  Camera.h  HierachicalShape.cpp  HierachicalShape.h  Image.cpp  Image.h  IntersectionData.h  Light.h  Material.h  Mesh.cpp  Mesh.h  MetaballPair.cpp  MetaballPair.h  Parser.cpp  Parser.h  Plane.cpp  Plane.h  Ray.cpp  Ray.h  Scene.cpp  Scene.h  Shape.h  Sphere.cpp  Sphere.h  main.cpp
